--- a/product/package.json
+++ b/product/package.json
@@ -25,6 +25,7 @@
     "@nestjs/microservices": "^10.2.7",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "class-validator": "^0.14.0",
     "ioredis": "^5.3.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
