--- a/order/package.json
+++ b/order/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "order",
+  "name": "order-copy",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -22,10 +22,11 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/microservices": "^10.2.7",
+    "@nestjs/microservices": "^10.2.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
-    "ioredis": "^5.3.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.6",
